# ieapp

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  MILESTONE6_SUMMARY.md  README.md  TERMINOLOGY_EVALUATION_SUMMARY.md  docker-compose.yaml  mise.toml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/: AGENTS.md  copilot-instructions.md  dependabot.yml  renovate.json
.github/codeql/: codeql-config.yml
.github/instructions/: PYTHON.instructions.md
.github/scripts/: assert_junit_no_skips.py
.github/workflows/: all-tests-ci.yml  codeql.yml  docker-build-ci.yml  docsite-ci.yml  e2e-ci.yml  frontend-ci.yml  python-ci.yml  renovate.yml  scancode.yml
.specify/templates/: checklist-template.md  plan-template.md  tasks-template.md
backend/: .gitignore  Dockerfile  README.md  build_sandbox.sh  check_import.py  javy.gz.sha256  main.py  mise.toml  pyproject.toml  security.py
backend/src/app/: main.py
backend/src/app/api/: api.py  mcp.py
backend/src/app/api/endpoints/: asset.py  attachment.py  classes.py  entry.py  forms.py  link.py  note.py  search.py  space.py  sql.py  sql_sessions.py  workspace.py  workspaces.py
backend/src/app/core/: config.py  ids.py  middleware.py  sandbox.py  security.py  storage.py
backend/src/app/mcp/: __init__.py  server.py
backend/src/app/models/: classes.py  payloads.py  schemas.py
backend/src/app/sandbox/: __init__.py  build_sandbox_wasm.sh  python_sandbox.py
backend/src/backend/: __init__.py
backend/tests/: conftest.py  test_api.py  test_api_memory.py  test_api_reindexing.py  test_classes.py  test_forms.py  test_mcp.py  test_mcp_contract.py  test_sandbox.py  test_sandbox_integration.py  test_schemas.py  test_sql.py
docs/: SECURITY_AUDIT.md  TERMINOLOGY_DECISION_GUIDE.md  service-name-proposals.md  service-name-quick-comparison.md  terminology-entry-based-detail.md  terminology-evaluation-en.md  terminology-evaluation.md  terminology-holistic-exploration.md  terminology-ieapp-native.md  terminology-quick-comparison.md  terminology-reevaluation-en.md  terminology-reevaluation.md  twoalog-english-quick.md  twoalog-english-taglines.md  twoalog-taglines-quick.md  twoalog-taglines.md
docs/concepts/: terminology.md
docs/guide/: cli.md  docker-compose.md
docs/spec/: 00_index.md  01_architecture.md  02_features_and_stories.md  03_data_model.md  04_api_and_mcp.md  05_security_and_quality.md  06_frontend_backend_interface.md  07_requirements.md  README.md  index.md  specifications.yaml  tasks.md
docs/tasks/: roadmap.md  tasks.md
docs/tests/: README.md  __init__.py  test_features.py  test_governance_links.py  test_guides.py  test_oss_traceability.py  test_requirements.py  test_spec_governance.py
docsite/: README.md  astro.config.mjs  biome.json  mise.toml  package.json  tailwind.config.mjs  tsconfig.json
docsite/src/: styles.css
e2e/: .gitignore  canvas.test.ts  classes.test.ts  datamodel.test.ts  entries.test.ts  forms.test.ts  mise.toml  navigation.test.ts  notes.test.ts  package-lock.json  package.json  playwright.config.ts  smoke.test.ts  tsconfig.json  ui-themes.test.ts
e2e/lib/: client.ts
e2e/scripts/: run-e2e.sh  smoke-test.sh
frontend/: Dockerfile  MILESTONE5_SUMMARY.md  README.md  app.config.ts  biome.json  error-handler.ts  mise.toml  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/e2e/: notes.spec.ts
frontend/scripts/: patch-vinxi-dev-error.js
frontend/src/: app.css  app.tsx  entry-client.tsx  error-handler.ts  global.d.ts
ieapp-backend/: pyproject.toml
ieapp-cli/: mise.toml  pyproject.toml
ieapp-cli/s3:/my-bucket/ieapp_root/: global.json
ieapp-cli/s3:/my-bucket/ieapp_root/workspaces/test-workspace/: meta.json  settings.json
ieapp-cli/scripts/: build_sandbox.py
ieapp-cli/src/ieapp/: __init__.py  assets.py  attachments.py  classes.py  cli.py  entries.py  forms.py  hmac_manager.py  indexer.py  integrity.py  links.py  logging_utils.py  notes.py  sandbox.py  saved_sql.py  schemas.py  search.py  space.py  utils.py  workspace.py
ieapp-cli/src/ieapp/sandbox/: __init__.py  execution.py  runner.js  sandbox.wasm
ieapp-cli/tests/: __init__.py  conftest.py  test_assets.py  test_attachments.py  test_build_sandbox.py  test_classes.py  test_cli_class.py  test_cli_form.py  test_cli_schema.py  test_entries.py  test_forms.py  test_hmac_manager.py  test_indexer.py  test_integrity.py  test_notes.py  test_sandbox.py  test_saved_sql.py  test_schemas.py  test_space.py  test_sql_rules.py  test_workspace.py
ieapp-core/: .gitignore  Cargo.toml  mise.toml  pyproject.toml
ieapp-core/ieapp_core/: __init__.py  _ieapp_core.pyi  sql_rules.py
ieapp-core/src/: asset.rs  attachment.rs  class.rs  entry.rs  iceberg_store.rs  index.rs  integrity.rs  lib.rs  link.rs  materialized_view.rs  metadata.rs  note.rs  saved_sql.rs  search.rs  space.rs  sql.rs  sql_session.rs  system.rs  workspace.rs
ieapp-core/src/sandbox/: mod.rs
ieapp-core/src/storage/: mod.rs  opendal.rs
ieapp-core/tests/: __init__.py  test_asset.rs  test_async_bindings.py  test_attachment.rs  test_bindings.py  test_class.rs  test_entry.rs  test_form.rs  test_index.rs  test_integrity.rs  test_link.rs  test_materialized_view.rs  test_note.rs  test_sample_data.rs  test_sandbox.rs  test_saved_sql.rs  test_search.rs  test_space.rs  test_sql_sessions.rs  test_workspace.rs
ieapp-core/tests/common/: mod.rs
scripts/: run-e2e.sh  setup_javy.sh  smoke-test.sh
shared/i18n/: ui.json
shared/sql/: ieapp-sql-rules.json  ugoite-sql-rules.json
shared/themes/: primary-color-definitions.json  ui-theme-definitions.json  ui-theme-docsite.css
specs/001-knowledge-space-app/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
ugoite-cli/: mise.toml  pyproject.toml
ugoite-cli/scripts/: build_sandbox.py
ugoite-cli/tests/: __init__.py  conftest.py  test_assets.py  test_build_sandbox.py  test_cli_endpoint_routing.py  test_cli_form.py  test_endpoint_config.py  test_entries.py  test_forms.py  (+6 more)
ugoite-core/: .gitignore  Cargo.toml  clippy.toml  mise.toml  pyproject.toml
(+352 files in other folders)
