[project]
name = "app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.121.1",
    "ieapp-core",
    "mcp>=1.0.0",
    "uvicorn>=0.38.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "ty>=0.0.1a26",
]

[build-system]
requires = ["uv_build>=0.9.4,<0.11.0"]
build-backend = "uv_build"

[tool.uv]

[tool.uv.sources]
ieapp-core = { path = "../ieapp-core", editable = true }

[tool.ruff]

[tool.ruff.lint]

[tool.ruff.lint.per-file-ignores]
"tests/**.py" = ["S101", "ARG001", "PLR2004", "ANN401", "E402"]
