[project]
name = "ieapp-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tohboeh5", email = "tohboeh5simsim7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
ieapp-backend = "ieapp_backend:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"
