[project]
name = "ieapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tohboeh5", email = "tohboeh5simsim7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.10.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
ieapp = "ieapp.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ty>=0.0.1a26",
]

[tool.ruff]
target-version = "py313"

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
"tests/test_*.py" = ["S101"]
