[project]
name = "ieapp"
version = "0.1.1"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "tohboeh5", email = "tohboeh5simsim7@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "fsspec>=2025.10.0",
    "ieapp-core",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0",
    "typer>=0.15.0",
]

[project.scripts]
ieapp = "ieapp.cli:main"

[build-system]
requires = ["uv_build>=0.9.4,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "ty>=0.0.1a26",
]

[tool.ruff]
target-version = "py313"

[tool.uv]

[tool.uv.sources]
ieapp-core = { path = "../ieapp-core", editable = true }

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Test files commonly use `typing.Any`, magic numbers, and unused-fixture
# patterns that we intentionally allow. Centralize those exceptions here
# instead of using inline `# noqa` comments.
"tests/**.py" = ["S101", "ARG001", "PLR2004", "ANN401", "E402"]
"src/ieapp/cli.py" = ["ANN401", "PLR0913"]
"src/ieapp/indexer.py" = ["ANN401"]
"src/ieapp/notes.py" = ["PLR0913"]
"src/ieapp/hmac_manager.py" = ["ARG001"]  # protocol arg is cache key for lru_cache
