[package]
name = "ieapp-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ieapp_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opendal = "0.51"
wasmtime = "29.0"
tokio = { version = "1.0", features = ["full"] }
anyhow = "1.0"
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.19.0", features = ["v4", "serde"] }

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
