[package]
name = "ieapp-core"
version = "0.1.0"
edition = "2021"

[lib]
name = "_ieapp_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
opendal = { version = "0.55", features = ["services-fs", "services-memory"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "fs", "io-util"] }
anyhow = "1.0"
chrono = { version = "0.4.43", features = ["serde"] }
url = "2.5.0"
uuid = { version = "1.19.0", features = ["v4", "serde"] }
futures = { version = "0.3.31", features = ["std"] }
pyo3-async-runtimes = { version = "0.23", features = ["tokio-runtime"] }
thiserror = "2.0.18"
base64 = "0.22.1"
rand = "0.9.2"
serde_yaml = "0.9.34"
regex = "1.12.2"
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"
iceberg = "0.8.0"
iceberg-catalog-rest = "0.8.0"
arrow-array = "57.0"
arrow-schema = "57.0"
parquet = "57.0"

[dev-dependencies]
pyo3 = { version = "0.23", features = ["auto-initialize"] }
