[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ieapp-core"
requires-python = ">=3.12"
dependencies = []
dynamic = ["version"]

[dependency-groups]
dev = [
    "maturin>=1.5,<2.0",
    "pytest>=9.0.1",
    "ruff>=0.14.7",
    "ty>=0.0.1a26",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ieapp_core._ieapp_core"

[tool.ruff]

[tool.ruff.lint]
select = ["ALL"]

[tool.ruff.lint.per-file-ignores]
# Test files commonly use `typing.Any`, magic numbers, and unused-fixture
# patterns that we intentionally allow. Centralize those exceptions here
# instead of using inline `# noqa` comments.
"tests/**.py" = ["S101", "ARG001", "PLR2004", "ANN401", "E402"]
